--- a/YOLO_Client_Server_Deployment/server.ipynb
+++ b/YOLO_Client_Server_Deployment/server.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -340,6 +340,7 @@
     "### Overview of the model\n",
     "\n",
     "모델이 object를 올바르게 감지하고 분류할 수 있는지 확인하기 위해  객체 감지 라이브러리인 [`cvlib`](https://www.cvlib.net/)을 사용합니다. cvlib은 얼굴, 객체 인식을 위한 사용하기 쉬운 라이브러리인데 OpenCV 와 tensorflow 로 작성된 라이브러리이므로 2 가지를 함께 설치해야 합니다.\n",
+    "(terminal에서 pip install tensorflow 명령으로 tensorflow를 미리 설치합니다.) \n",
     "\n",
     "numpy array format의 이미지를 받아 다음을 반환하는 [`detect_common_objects`](https://docs.cvlib.net/object_detection/) 함수를 사용합니다.\n",
     "```\n",
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,14 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import cvlib as cv\n",
     "from cvlib.object_detection import draw_bbox\n",
-    "\n",
     "\n",
     "def detect_and_draw_box(filename, model=\"yolov4\", confidence=0.5):\n",
     "    \"\"\"이미지에서 일반적인 object를 감지하고\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,18 +903,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install uvicorn\n",
-    "!pip install fastapi\n",
-    "!pip install python-multipart"
+    "#!pip install uvicorn\n",
+    "#!pip install fastapi\n",
+    "#!pip install python-multipart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,8 +928,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[고급 Python 문법 설명](#Python-Syntax)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +963,7 @@
     "    \n",
     "    # 2.  RAW IMAGE를 CV2 image로 변환\n",
     "    \n",
-    "    image_stream = io.BytesIO(file.file.read())  # stream of bytes 로 이미지 읽기\n",
+    "    image_stream = io.BytesIO(file.file.read())  # byte stream으로 이미지 읽기\n",
     "    image_stream.seek(0)   # stream을 처음(0 위치)부터 시작합니다.\n",
     "    \n",
     "    # numpy 배열로 bytes stream 쓰기\n",
@@ -993,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -1002,7 +1009,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [16936]\n",
+      "INFO:     Started server process [36080]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
       "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
@@ -1012,68 +1019,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:50853 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50853 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50854 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 500 Internal Server Error\n"
+      "INFO:     127.0.0.1:57426 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57427 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57427 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57428 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57436 - \"POST /predict?model=yolov4 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57461 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57475 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57479 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57484 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57486 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:57488 - \"POST /predict?model=yolov4-tiny HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\uvicorn\\protocols\\http\\h11_impl.py\", line 407, in run_asgi\n",
-      "    result = await app(  # type: ignore[func-returns-value]\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\uvicorn\\middleware\\proxy_headers.py\", line 78, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\fastapi\\applications.py\", line 271, in __call__\n",
-      "    await super().__call__(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\applications.py\", line 118, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\middleware\\errors.py\", line 184, in __call__\n",
-      "    raise exc\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\middleware\\errors.py\", line 162, in __call__\n",
-      "    await self.app(scope, receive, _send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\middleware\\exceptions.py\", line 79, in __call__\n",
-      "    raise exc\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\middleware\\exceptions.py\", line 68, in __call__\n",
-      "    await self.app(scope, receive, sender)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\fastapi\\middleware\\asyncexitstack.py\", line 21, in __call__\n",
-      "    raise e\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\fastapi\\middleware\\asyncexitstack.py\", line 18, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\routing.py\", line 706, in __call__\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\routing.py\", line 276, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\routing.py\", line 66, in app\n",
-      "    response = await func(request)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\fastapi\\routing.py\", line 237, in app\n",
-      "    raw_response = await run_endpoint_function(\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\fastapi\\routing.py\", line 165, in run_endpoint_function\n",
-      "    return await run_in_threadpool(dependant.call, **values)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\starlette\\concurrency.py\", line 41, in run_in_threadpool\n",
-      "    return await anyio.to_thread.run_sync(func, *args)\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\anyio\\to_thread.py\", line 28, in run_sync\n",
-      "    return await get_asynclib().run_sync_in_worker_thread(func, *args, cancellable=cancellable,\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 818, in run_sync_in_worker_thread\n",
-      "    return await future\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\asyncio\\futures.py\", line 284, in __await__\n",
-      "    yield self  # This tells Task to wait for completion.\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\asyncio\\tasks.py\", line 328, in __wakeup\n",
-      "    future.result()\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\asyncio\\futures.py\", line 201, in result\n",
-      "    raise self._exception\n",
-      "  File \"C:\\Users\\trimu\\anaconda3\\lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 754, in run\n",
-      "    result = context.run(func, *args)\n",
-      "  File \"C:\\Users\\trimu\\AppData\\Local\\Temp\\ipykernel_16936\\2181607018.py\", line 31, in prediction\n",
-      "    image = cv2.imdecode(file_bytes, cv2.IMREAD_COLOR)\n",
-      "NameError: name 'cv2' is not defined\n",
       "INFO:     Shutting down\n",
       "INFO:     Waiting for application shutdown.\n",
       "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [16936]\n"
+      "INFO:     Finished server process [36080]\n"
      ]
     }
    ],
@@ -1175,6 +1141,81 @@
     "fastAPI를 사용하면 내장 클라이언트를 통해 API와 상호 작용할 수 있습니다.  일반 코드를 사용하여 API와 상호 작용할 수도 있습니다.\n",
     "\n",
     "이를 위해 서버를 실행 중인 상태로 두고 `client.ipynb` 노트북을 엽니다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Python-Syntax'> </a>\n",
+    "### Python 고급 문법 보충 설명\n",
+    "\n",
+    "**Enum**\n",
+    "Python에서 Enum은 고유하고 상수 값에 바인딩된 기호 이름 집합인 열거형을 만들기 위한 클래스입니다. 이렇게 하면 코드를 더 읽기 쉽고 이해하기 쉽게 만들 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color.RED\n",
+      "Color.GREEN\n",
+      "Color.BLUE\n"
+     ]
+    }
+   ],
+   "source": [
+    "from enum import Enum\n",
+    "\n",
+    "class Color(Enum):\n",
+    "    RED = 1\n",
+    "    GREEN = 2\n",
+    "    BLUE = 3\n",
+    "\n",
+    "print(Color.RED)\n",
+    "print(Color.GREEN)\n",
+    "print(Color.BLUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__', '__doc__', '__members__', '__module__', 'yolov4', 'yolov4tiny']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Model(str, Enum):\n",
+    "    yolov4tiny = \"yolov4-tiny\"\n",
+    "    yolov4 = \"yolov4\"\n",
+    "    \n",
+    "dir(Model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "def prediction(model: Model, file: UploadFile = File(...)):\n",
+    "```\n",
+    "\n",
+    "Model: 예측을 수행하는 데 사용되는 모델 개체입니다.  \n",
+    "file: 양식을 통해 업로드된 파일을 나타내는 UploadFile 개체입니다. 이 기능은 업로드된 파일 파일에서 모델을 사용하여 예측하는 데 사용됩니다. `...`가 포함된 File 매개변수는 파일 매개변수가 필수이며 전달되지 않으면 함수에서 오류가 발생함을 나타냅니다."
    ]
   },
   {
